tests/compile_fail/dynify_with_unsupported_item.rs
#[dynify::dynify]
fn test() {}

#[dynify::dynify]
opaque_trait!();

fn main() {}
